spotless check applied