@@ -10,7 +10,7 @@ import java.util.List;
 public class T4SharedMutability {
     public static void main(String[] args) {
         String url = "https://www.mit.edu/~ecprice/wordlist.100000";
-        List<String> words = getData(url);//Add more data
+        List<String> words = getData(url); // Add more data
 
         sharedMutabilityParallelism(words);
         useCollectorOrToList(words);
@@ -20,11 +20,9 @@ public class T4SharedMutability {
         System.out.println("======== useCollectorOrToList ========");
         System.out.println("initial size = " + words.size());
 
-        //Use collectors instead
-        List<String> result = words.parallelStream()
-                .map(String::toUpperCase)
-                .toList();
-        //.collect(Collectors.toList());
+        // Use collectors instead
+        List<String> result = words.parallelStream().map(String::toUpperCase).toList();
+        // .collect(Collectors.toList());
 
         System.out.println("initial size = " + result.size());
     }
@@ -32,11 +30,11 @@ public class T4SharedMutability {
     private static void sharedMutabilityParallelism(List<String> words) {
         System.out.println("======== sharedMutabilityParallelism ========");
         System.out.println("initial size = " + words.size());
-        List<String> result = new ArrayList<>();//Shared Mutable Variable
+        List<String> result = new ArrayList<>(); // Shared Mutable Variable
 
-        words.parallelStream()//.stream
+        words.parallelStream() // .stream
                 .map(String::toUpperCase)
-                .forEach(name -> result.add(name));//Shared Mutability is BAD
+                .forEach(name -> result.add(name)); // Shared Mutability is BAD
 
         System.out.println("initial size = " + result.size());
     }
@@ -47,7 +45,8 @@ public class T4SharedMutability {
             // Create a URL a5object
             URL urlObject = new URL(url);
             // Open a connection to the URL
-            BufferedReader reader = new BufferedReader(new InputStreamReader(urlObject.openStream()));
+            BufferedReader reader =
+                    new BufferedReader(new InputStreamReader(urlObject.openStream()));
             String line;
             while ((line = reader.readLine()) != null) {
                 words.add(line);
